[package]
name = "solana-arbitrage"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { version = "^1.0" }
solana-client = { version = "^2.1" }
solana-sdk = { version = "^2.1" }
spl-token-2022 = { version = "^7.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6.0" }
tokio = { version = "^1.43.1" }
tokio-retry = { version = "^0.3.0" }
dotenv = { version = "^0.15.0" }

orca_whirlpools = { version = "^5.0" }
orca_whirlpools_client = { version = "^5.0" }
orca_whirlpools_core = { version = "^2.0" }

clap = { version = "^4.5.21", features = ["derive", "env"] }
colored = { version = "^2.0" }
eyre = "0.6.12"
kraken-async-rs = "0.13.0"
tracing = "0.1.41"
tokio-stream = "0.1.17"
rust_decimal = { version = "1.39.0", features = ["macros", "maths"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
solana-pubsub-client = "3.0.8"
solana-commitment-config = "3.0.0"
solana-pubkey = "3.0.0"
solana-rpc-client-types = "3.0.8"
futures-util = "0.3.31"
solana-account-decoder-client-types = "3.0.8"
